# rovers-basestation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  COOL_DIAGRAM.md  DEVELOPER_GUIDE.md  Dockerfile  GPS.py  README.md  compare_formats.py  debug_xbox.py  docker-compose.yml  e.txt  launch_xbee.py  main.py  package-lock.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_tests.py  settings.ini  settings_template.ini  tailwind.config.js  test_mapping.py  test_system_human.py  test_system_pytest.py  test_xbox_mapping.py
.github/: dependabot.yml
.github/workflows/: python-tests.yml  tests.yml
Archive/: package.json
Archive/Configuration/: remote.py  sender.py
Archive/Practice/: Import_Data_From_External.txt  Manipulating_Data_CSV.py  SampleWrite.txt  Save_Text_To_File.txt
Archive/legacy/: Jetson.py  TESTING_PORT.py  Xbee.py  __init__.py
Configuration/: listener.py
Practice/: Save_Text_To_File.py
autoBoot/: autoBoot.py  autoBoot.service  autoBoot.sh
auto_boot/: README.md  __init__.py  auto_boot.py  auto_boot.service  auto_boot.sh  basestation.desktop  readMe
basestation/: __init__.py  __main__.py  app.py  comms.py  gamepads.py  gui.py  keyboard.py  protocol.py  spacemouse.py
src/: output.css
tests/: conftest.py  fixtures.py  test_basestation.py  test_system_pytest.py
tools/: debug_gamepad.py  gps_reader.py
utils/: GPS.py  __init__.py  bytes.py  gps.py
xbee/: CommandCodes.py  Jetson.py  JoystickFeedback.py  README.md  TESTING_PORT.py  Xbee.py  __init__.py  __main__.py  app.py  readMe.txt
xbee/display/: base.py  (+3 more)
(+94 files in other folders)
