[project]
name = "rovers-basestation"
version = "1.0.0"
description = "RIT SPEX Rover Basestation Control System"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E203", "E501"]
select = ["E", "F", "W", "C", "N", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
exclude = "tests/.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"